--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 					<deploymentType>cloudhub</deploymentType>
 					<muleVersion>3.7.2</muleVersion>
 					<username>siddartha</username>
-					<password>@Mulesoft427</password>
+					<password>Mulesoft427</password>
 					<workerType>Micro</workerType>
 					<redeploy>true</redeploy>
 					<environment>Production</environment>
