--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mycompany</groupId>
-	<artifactId>maven-projects</artifactId>
+	<artifactId>maven-project-siddartha</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule</packaging>
 	<name>Mule maven-project Application</name>
@@ -26,7 +26,7 @@
 				<version>2.0</version>
 				<configuration>
 					<deploymentType>cloudhub</deploymentType>
-					<muleVersion>3.7.2</muleVersion>
+					<muleVersion>3.9.2</muleVersion>
 					<username>siddartha</username>
 					<password>Mulesoft427</password>
 					<workerType>Micro</workerType>
