--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 					<password>Mulesoft427</password>
 					<workerType>Micro</workerType>
 					<redeploy>true</redeploy>
-					<environment>Production</environment>
+					<environment>DEV</environment>
 				</configuration>
 				<executions>
 					<execution>
