--- a/pom.xml
+++ b/pom.xml
@@ -17,22 +17,25 @@
 		<mule.tools.version>1.7</mule.tools.version>
 		<activemq-version>5.11.1</activemq-version>
 	</properties>
-
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
-				<version>2.0</version>
+				<version>2.3.3</version>
 				<configuration>
-					<deploymentType>cloudhub</deploymentType>
-					<muleVersion>3.9.2</muleVersion>
-					<username>siddartha</username>
-					<password>Mulesoft427</password>
-					<workerType>Micro</workerType>
-					<redeploy>true</redeploy>
-					<!-- <organization>LnD</organization> -->
-					<environment>DEV</environment>
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>3.9.2</muleVersion>
+						<username>siddartha</username>
+						<password>Mulesoft427</password>
+						<applicationName>maven-project-siddartha</applicationName>
+						<businessGroup>LnD</businessGroup>
+						<environment>DEV</environment>
+						<properties>
+							<key>value</key>
+						</properties>
+					</cloudHubDeployment>
 				</configuration>
 				<executions>
 					<execution>
@@ -44,7 +47,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-app-maven-plugin</artifactId>
